se aplican estilos css

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap.scss";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap');
 
 /* 
 
@@ -11,3 +12,104 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: #F7F6F2;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.contenido{
+    margin-top: 30px;
+    width: 100%;
+}
+
+.main{
+    background-color: #4B6587;
+    border-radius: 10px;
+    text-align: center;
+    margin: auto ;
+    padding: 30px;
+    width: 500px;
+
+    h1{
+        color: #FFF;
+        margin-bottom: 20px;
+    }
+
+    .error{
+        background-color: #EFB7B7;
+        color: #BD4B4B;
+        padding: 5px;
+        width: 100%;
+    }
+
+    form{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+        .contenido_formulario{
+            display:flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 0 auto;
+            width: 100%;
+        }
+        input{
+            color: #716F81;
+            border: none;
+            border-radius: 3px;
+            margin-right: 5px;
+            outline: none;
+            padding: 5px;
+            width: 100%;
+        }
+        .agregar{
+            color: #FFF;
+            background-color: #7EB5A6;
+            border: none;
+            border-radius: 3px;
+            padding: 5px;
+            width: 50px;
+        }
+    .tareas{
+        padding: 10px 0;
+        width: 100%;
+
+        h3{
+            color: #FFF;
+        }
+
+        .contenido_tarea{
+            
+            display:flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+            width: 100%;
+            
+        }
+
+        p{
+            background-color: #E8D0B3;
+            box-shadow: 2px 2px #888888;
+            color: #716F81;
+           margin: 0 5px 0 0;
+           padding: 5px;
+           width: 100%;
+           text-align: left;
+        }
+        .eliminar{
+            color: #FFF;
+            background-color: #C36839;
+            border: none;
+            border-radius: 3px;
+            padding: 5px;
+            width: 50px; 
+        }
+    }    
+}
