Actualizacion de estilos css

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,6 +30,7 @@ body{
 
 .main{
     background-color: #4B6587;
+    box-shadow: 4px 4px 8px 0 #888888;
     border-radius: 10px;
     text-align: center;
     margin: auto ;
