--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -112,5 +112,9 @@ body{
             padding: 5px;
             width: 50px; 
         }
-    }    
+    }
+    .footer{
+        color: #FFF;
+        margin: 30px 0 0 0;
+    } 
 }
